--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -1,3 +1,11 @@
 .login-container {
     max-width: 350px;
+    float: none;
+    margin: 0 auto;
+}
+
+.page-footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
